<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorTertiary"
        app:hintTextAppearance="@style/TextAppearance.Design.Hint"
        tools:context="com.watsonlogic.vitalarium.view.taskdetail.TaskDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/task_detail_content_margin_top"
            android:padding="@dimen/content_padding">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/task_detail_vertical_margin">

                <ImageView
                    android:id="@+id/task_title_image"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:tint="@android:color/secondary_text_dark"
                    app:srcCompat="@drawable/ic_title_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/task_title_textinputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@id/task_title_image">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/task_title_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/task_title_hint" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/task_detail_vertical_margin">

                <ImageView
                    android:id="@+id/task_description_image"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_alignBottom="@id/task_description_textinputlayout"
                    android:tint="@android:color/secondary_text_dark"
                    app:srcCompat="@drawable/ic_description_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/task_description_textinputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@id/task_description_image">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/task_description_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/task_description_hint" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/task_detail_vertical_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/task_size_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/task_size_spinner_label"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <Spinner
                        android:id="@+id/task_size_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/task_size_container"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/task_sprint_spinner_label"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <Spinner
                        android:id="@+id/task_sprint_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/task_status_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/task_status_spinner_label"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <Spinner
                        android:id="@+id/task_status_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>